--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,5 +16,15 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+     <style name="textTitle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/text_white</item>
+    </style>
+    
+    <style name="textSmall">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/text_white</item>
+    </style>
 
 </resources>
