--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/music_name"
         style="@style/textTitle"
         android:layout_width="@dimen/x200"
-        android:layout_height="@dimen/y35"
+        android:layout_height="@dimen/y30"
         android:layout_gravity="center"
         android:layout_marginTop="@dimen/y12"
         android:background="@color/text_grey21"
@@ -21,29 +21,55 @@
         android:layout_width="@dimen/x160"
         android:layout_height="@dimen/y120"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/y18"
+        android:layout_marginTop="@dimen/y15"
         android:contentDescription="@string/app_name"
         android:src="@drawable/widget_music_album_default" />
 
-    <TextView
-        android:id="@+id/music_singer"
-        style="@style/textSmall"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/x100"
-        android:layout_marginTop="@dimen/y15"
-        android:gravity="center"
-        android:text="@string/music_singer" />
+        android:layout_marginTop="@dimen/y20"
+        android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/music_record"
-        style="@style/textSmall"
+        <TextView
+            style="@style/textSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/singer" />
+
+        <TextView
+            android:id="@+id/music_singer"
+            style="@style/textSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/music_singer" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/x100"
         android:layout_marginTop="@dimen/y10"
-        android:gravity="center"
-        android:text="@string/music_record" />
+        android:orientation="horizontal" >
+
+        <TextView
+            style="@style/textSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/record" />
+
+        <TextView
+            android:id="@+id/music_record"
+            style="@style/textSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/music_record" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
