--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -5,16 +5,32 @@
     android:background="@color/background"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/music_name"
-        style="@style/textTitle"
-        android:layout_width="@dimen/y300"
-        android:layout_height="@dimen/x25"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/x12"
-        android:background="@color/text_grey21"
-        android:gravity="center"
-        android:text="@string/music_name" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/y12" >
+
+        <TextView
+            android:id="@+id/music_name"
+            style="@style/textTitle"
+            android:layout_width="@dimen/y300"
+            android:layout_height="@dimen/x25"
+            android:layout_gravity="center"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:text="@string/music_name" />
+
+        <ImageButton
+            android:id="@+id/music_list"
+            android:layout_width="@dimen/y30"
+            android:layout_height="@dimen/x30"
+            android:layout_marginLeft="@dimen/x10"
+            android:layout_toRightOf="@id/music_name"
+            android:contentDescription="@string/app_name"
+            android:layout_centerInParent="true"
+            android:scaleType="fitCenter"
+            android:src="@drawable/widget_music_btn_next_press" />
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
