--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -24,13 +24,35 @@
         android:layout_marginTop="@dimen/y5"
         android:orientation="horizontal" >
 
+        
+ 
+        
+       
+        <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/y40"
+      	>
+        
         <ImageView
-            android:id="@+id/music_pic"
-            android:layout_width="@dimen/x120"
-            android:layout_height="@dimen/y90"
-            android:layout_marginLeft="@dimen/y40"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/widget_music_album_default" />
+        android:id="@+id/music_pic"  
+       	android:layout_width="@dimen/x120"
+        android:layout_height="@dimen/y90"  
+        android:contentDescription="@string/app_name"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/widget_music_album_default"
+        />
+
+        <com.liushuan.MediaUtil.RoundImageView
+            android:id="@+id/music_people"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:scaleType="center"/>
+   		</RelativeLayout>
+        
+        
 
         <RelativeLayout
             android:layout_width="wrap_content"
