--- a/res/layout-land/activity_main.xml
+++ b/res/layout-land/activity_main.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/y12" >
+        android:layout_marginTop="@dimen/y22" >
 
         <TextView
             android:id="@+id/music_name"
@@ -120,7 +120,7 @@
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="@dimen/y45"
         android:layout_marginRight="@dimen/y45"
-        android:layout_marginTop="@dimen/x5"
+        android:layout_marginTop="@dimen/x15"
         android:orientation="horizontal" >
 
         <TextView
@@ -134,11 +134,11 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"
             android:layout_weight="1"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/y20"
-            android:paddingRight="@dimen/y20" >
+            android:paddingLeft="@dimen/y10"
+            android:paddingRight="@dimen/y10" >
 
             <SeekBar
                 android:id="@+id/music_seekBar"
