--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -26,5 +26,8 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/text_white</item>
     </style>
-
+     <style name="AnimationPop">
+        <item name="android:windowEnterAnimation">@anim/anim_bottom_enter</item>
+        <item name="android:windowExitAnimation">@anim/anim_bottom_out</item>
+    </style>
 </resources>
