--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
@@ -8,16 +9,15 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/y22"
-         >
+        android:layout_marginTop="@dimen/y22" >
 
         <TextView
             android:id="@+id/music_name"
             style="@style/textTitle"
             android:layout_width="@dimen/x200"
             android:layout_height="@dimen/y30"
-            android:layout_gravity="center"
             android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
             android:gravity="center"
             android:text="@string/music_name" />
 
@@ -33,22 +33,19 @@
             android:src="@drawable/ic_music_list" />
     </RelativeLayout>
 
- 		<RelativeLayout
+    <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/y15"
-        android:padding="10dp"
-      	>
-        
-        <ImageView
-        android:id="@+id/music_pic"  
-       	android:layout_width="@dimen/x160"
-        android:layout_height="@dimen/y120"
+        android:padding="10dp" >
 
-        android:contentDescription="@string/app_name"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/widget_music_album_default"
-        />
+        <ImageView
+            android:id="@+id/music_pic"
+            android:layout_width="@dimen/x160"
+            android:layout_height="@dimen/y120"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/widget_music_album_default"
+            android:contentDescription="@string/app_name" />
 
         <com.liushuan.MediaUtil.RoundImageView
             android:id="@+id/music_people"
@@ -56,11 +53,8 @@
             android:layout_height="80dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:scaleType="center"/>
-         
-   		</RelativeLayout>
-    
-   
+            android:scaleType="center" />
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
