--- a/res/layout/menu_item.xml
+++ b/res/layout/menu_item.xml
@@ -11,7 +11,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_launcher"
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/music_item_title"
