--- a/res/layout-land/activity_main1.xml
+++ b/res/layout-land/activity_main1.xml
@@ -29,8 +29,9 @@
             android:layout_toRightOf="@id/music_name"
             android:contentDescription="@string/app_name"
             android:layout_centerInParent="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_music_list" />
+            android:scaleType="center"
+            android:background="?android:selectableItemBackground"
+            android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha" />
     </RelativeLayout>
 
     <LinearLayout
@@ -49,11 +50,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/y40"
-      	>
+        >
         
         <ImageView
         android:id="@+id/music_pic"  
-       	android:layout_width="@dimen/x120"
+        android:layout_width="@dimen/x120"
         android:layout_height="@dimen/y90"  
         android:contentDescription="@string/app_name"
         android:layout_centerHorizontal="true"
@@ -67,7 +68,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:scaleType="center"/>
-   		</RelativeLayout>
+        </RelativeLayout>
         
         
 
@@ -144,7 +145,15 @@
             <SeekBar
                 android:id="@+id/music_seekBar"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:maxHeight="3dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:progressDrawable="@drawable/seekbar_bg"
+                android:thumb="@drawable/thumb_bar"
+                android:layout_gravity="center_vertical"
+                />
         </LinearLayout>
 
         <TextView
