--- a/res/layout-land/activity_main1.xml
+++ b/res/layout-land/activity_main1.xml
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/y40"
-        >
+        android:padding="5dp">
         
         <ImageView
         android:id="@+id/music_pic"  
