--- a/res/layout-land/activity_main1.xml
+++ b/res/layout-land/activity_main1.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    android:id="@+id/main"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -15,22 +15,28 @@
             android:id="@+id/music_name"
             style="@style/textTitle"
             android:layout_width="@dimen/y300"
-            android:layout_height="@dimen/x25"
-            android:layout_gravity="center"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:layout_gravity="center"
+            android:ellipsize="marquee"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
             android:gravity="center"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
             android:text="@string/music_name" />
 
         <ImageButton
             android:id="@+id/music_list"
             android:layout_width="@dimen/y30"
             android:layout_height="@dimen/x36"
-            android:layout_marginLeft="@dimen/x10"
-            android:layout_toRightOf="@id/music_name"
-            android:contentDescription="@string/app_name"
+            android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
-            android:scaleType="center"
+            android:layout_marginRight="@dimen/x35"
             android:background="?android:selectableItemBackground"
+            android:contentDescription="@string/app_name"
+            android:scaleType="center"
             android:src="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha" />
     </RelativeLayout>
 
@@ -42,35 +48,28 @@
         android:layout_marginTop="@dimen/y5"
         android:orientation="horizontal" >
 
-        
- 
-        
-       
         <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/y40"
-        >
-        
-        <ImageView
-        android:id="@+id/music_pic"  
-        android:layout_width="@dimen/x120"
-        android:layout_height="@dimen/y90"  
-        android:contentDescription="@string/app_name"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/widget_music_album_default"
-        />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/y40" >
 
-        <com.liushuan.MediaUtil.RoundImageView
-            android:id="@+id/music_people"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:scaleType="center"/>
+            <ImageView
+                android:id="@+id/music_pic"
+                android:layout_width="140dp"
+                android:layout_height="140dp"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/widget_music_album_default"
+                android:contentDescription="@string/app_name"
+                android:scaleType="fitCenter" />
+
+            <com.liushuan.MediaUtil.RoundImageView
+                android:id="@+id/music_people"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:scaleType="center" />
         </RelativeLayout>
-        
-        
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -136,24 +135,21 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:gravity="center_vertical"
             android:layout_weight="1"
-            android:orientation="horizontal"
-            android:paddingLeft="@dimen/y10"
-            android:paddingRight="@dimen/y10" >
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
 
             <SeekBar
                 android:id="@+id/music_seekBar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:maxHeight="3dp"
-                android:layout_marginTop="3dp"
+                android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginTop="3dp"
+                android:maxHeight="3dp"
                 android:progressDrawable="@drawable/seekbar_bg"
-                android:thumb="@drawable/thumb_bar"
-                android:layout_gravity="center_vertical"
-                />
+                android:thumb="@drawable/thumb_bar" />
         </LinearLayout>
 
         <TextView
@@ -178,6 +174,7 @@
             android:id="@+id/music_pre"
             android:layout_width="@dimen/y30"
             android:layout_height="@dimen/x40"
+            android:background="?android:selectableItemBackground"
             android:contentDescription="@string/app_name"
             android:src="@drawable/widget_previous_normal" />
 
@@ -190,6 +187,7 @@
             android:id="@+id/music_pause"
             android:layout_width="@dimen/y30"
             android:layout_height="@dimen/x40"
+            android:background="?android:selectableItemBackground"
             android:contentDescription="@string/app_name"
             android:src="@drawable/widget_play_normal" />
 
@@ -202,6 +200,7 @@
             android:id="@+id/music_next"
             android:layout_width="@dimen/y30"
             android:layout_height="@dimen/x40"
+            android:background="?android:selectableItemBackground"
             android:contentDescription="@string/app_name"
             android:src="@drawable/widget_next_normal" />
     </LinearLayout>
